Printed GlyphVector outline with low DPI has bad quality on Windows

XMLWordPrintable

    • 2d
    • b28
    • windows

        Printing text using GlyphVector outline has bad quality on printers with low DPI on Windows OS.
        The GDI system used for text printing on Windows accepts only integer path coordinates.
        Rounding GlyphVector outline coordinates leads to distorted printed text.

        To reproduce the issue run the attached PrintGlyphVectorOutlineSample.java file on Windows and select a low DPI printer in the printer dialog. The sample prints two lines, one using Graphics drawString() method and another by
        filling GlyphVector outline. Chars on the second line are distorted.

        It is also possible to reproduce the issue running the sample and printing the text to PDF (see attached fill-glyph-vector-outline.png screenshot).

              Assignee:
              Alexandr Scherbatiy
              Reporter:
              Alexandr Scherbatiy
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: