8256264: Printed GlyphVector outline with low DPI has bad quality on Windows